# synth-8080

./: .envrc  .gitignore  Notes.md  README.md  TODO.md  TODOs.md
desk-8080/: .gitignore  Cargo.toml  flake.nix  flake.nix.bak  input.css  justfile  package-lock.json  styles.css
desk-8080/src/: app.rs  main.rs
desk-8080/src-tauri/: Cargo.toml  tauri.conf.json
desk-8080/src-tauri/src/: graphs.rs  main.rs
gui/: README.md
hardware/: Cargo.toml  flake.nix  justfile
hardware/desk-8080-hardware/: platformio.ini
hardware/desk-8080-hardware/src/: common.cpp  common.h  lowpass.cpp  main.cpp  mco.cpp  mco.h
hardware/src/: main.rs  sm.rs
hardware/stand-alone/: README.md  justfile
hardware/stand-alone/.cargo/: config.toml
hardware/stand-alone/desk-8080-hardware/: platformio.ini
hardware/stand-alone/desk-8080-hardware/src/: lowpass.cpp  lowpass.h  main.cpp
hardware/synth-in-a-box/: Cargo.toml  README.md  justfile
lib/: Cargo.toml  README.md
lib/src/: lib.rs  notes.rs  notes.rs.bak  notes.rs.bak_2
lib/src/communication/: command.rs  mod.rs  request.rs  responce.rs
midi-test/: \  code.py  code.py.2.bak  code.py.bak  platformio.ini
midi-test/src/: main.cpp
rpi-version/: Cargo.toml  justfile
rpi-version/src/: communications.rs  main.rs
setup-pi/: README.md
synth-8080/: Cargo.toml  README.md  TODOs.md  flake.nix
synth-8080/helper-scripts/: note-maker.py
synth-8080/src/: lib.rs  main.rs
synth-8080/src/adbdr/: mod.rs
synth-8080/src/adsr/: mod.rs
synth-8080/src/chorus/: mod.rs
synth-8080/src/common/: mod.rs  notes.rs  notes.rs.bak
synth-8080/src/controller/: hardware.rs  harware.rs  midi.rs  mod.rs
synth-8080/src/delay/: mod.rs
synth-8080/src/echo/: mod.rs
synth-8080/src/envelope/: ad.rs  adbdr.rs  adsr.rs  allpass.rs  mod.rs  none.rs  oc.rs
synth-8080/src/lfo/: mod.rs
synth-8080/src/midi_osc/: mod.rs
synth-8080/src/osc/: mod.rs  saw.rs  sin_wt.rs  sine.rs  square.rs  triangle.rs
synth-8080/src/output/: mod.rs
synth-8080/src/overdrive/: mod.rs
synth-8080/src/reverb/: mod.rs
synth-8080/src/router/: mod.rs
synth-8080/src/vco/: mod.rs  mod.rs.bak
