[package]
name = "desk-8080-ui"
version = "0.0.0"
edition = "2024"

[features]
default = [ "HiFi" ]
HiFi = [ "synth-8080-lib/HiFi" ]
double_float = [ "synth-8080-lib/double_float" ]
wav_sample_rate = [ "synth-8080-lib/HiFi" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
synth-8080-lib = { version = "0.1.0", path = "../lib" }
strum = { version = "0.27.2", features = ["strum_macros"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["all"] }

[workspace]
members = ["src-tauri"]

[profile.dev]
incremental = true
opt-level = 3

[profile.release]
incremental = true
