[package]
name = "synth-8080-lib"
version = "0.1.0"
edition = "2021"

[features]
HiFi = ["double_float", "wav_sample_rate"]
double_float = []
wav_sample_rate = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
