[package]
name = "synth-pi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
synth-8080 = { version = "0.1.0", path = "../synth-8080", features = ["HiFi", "double_float", "wav_sample_rate"] }
synth-8080-lib = { version = "0.1.0", path = "../lib", features = ["HiFi", "double_float"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
