[package]
name = "synth-8080"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "hardware" ] 
hardware = [ "dep:serialport" ]

[dependencies]
anyhow = "1.0.79"
crossbeam-channel = "0.5.11"
fon = "0.6.0"
futures = "0.3.30"
reverb = "1.0.47"
rodio = "0.17.3"
serde = { version = "1.0.196", features = ["derive"] }
serialport = { version = "4.3.0", optional = true }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
tracing-subscriber = "0.3.18"
twang = "0.9.0"
lib = { package = "synth-8080-lib", path = "../lib/" }
bincode = "1.3.3"
midir = "0.10.0"
midly = "0.5.3"
