[package]
name = "synth-8080"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "hardware", "HiFi" ]
hardware = [ ]
HiFi = [ "lib/HiFi" ]
# HiFi = ["double_float", "wav_sample_rate"]
double_float = [ "lib/double_float" ]
wav_sample_rate = [ "lib/wav_sample_rate" ]
allpass = []

[profile.dev]
incremental = true

# [profile.release]
# incremental = true

[dependencies]
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
fon = "0.6.0"
futures = "0.3.30"
reverb = "1.0.47"
# rodio = "0.17.3"
rodio = "0.18.1"
serde = { version = "1.0.203", features = ["derive"] }
serialport = { version = "4.4.0", default-features = false }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
tracing-subscriber = "0.3.18"
twang = "0.9.0"
lib = { package = "synth-8080-lib", path = "../lib/" }
bincode = "1.3.3"
midir = "0.10.0"
midly = "0.5.3"
synfx-dsp = "0.5.6"
fundsp = { version = "0.17.1", default-features = false }
generic-array = "0.14.7"
