[package]
name = "synth-8080"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "hardware", "HiFi" ]
hardware = [ ]
HiFi = [ "lib/HiFi" ]
# HiFi = ["double_float", "wav_sample_rate"]
double_float = [ "lib/double_float" ]
wav_sample_rate = [ "lib/wav_sample_rate" ]
allpass = []

[profile.dev]
incremental = true

# [profile.release]
# incremental = true

[dependencies]
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
fon = "0.6.0"
futures = "0.3.31"
reverb = "1.0.47"
# rodio = "0.17.3"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serialport = { version = "4.8.1", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.43", features = ["async-await", "log", "log-always"] }
tracing-subscriber = "0.3.22"
twang = "0.9.0"
lib = { package = "synth-8080-lib", path = "../lib/" }
bincode = "2.0.1"
midir = "0.10.3"
midly = "0.5.3"
synfx-dsp = "0.5.6"
fundsp = { version = "0.20.0", default-features = false }
generic-array = "1.3.5"
