[package]
name = "desk-8080"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synth-8080 = { path = "../../synth-8080/", default-features = false }
synth-8080-lib = { path = "../../lib/" }
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.83"
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
HiFi = [ "synth-8080/HiFi", "synth-8080-lib/HiFi" ]
