[package]
name = "desk-8080"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synth-8080 = { path = "../../synth-8080/", default-features = false }
synth-8080-lib = { path = "../../lib/" }
# log = "0.4.21"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tracing = { version = "0.1.43", features = ["async-await", "log", "log-always"] }
dot-writer = "0.1.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
HiFi = [ "synth-8080/HiFi", "synth-8080-lib/HiFi" ]
double_float = [ "synth-8080/double_float", "synth-8080-lib/double_float" ]
wav_sample_rate = [ "synth-8080/wav_sample_rate", "synth-8080-lib/wav_sample_rate" ]
hardware = [ "synth-8080/hardware" ]

# All dependencies (but not this crate itself or any workspace member)
# will be compiled with -Copt-level=2 . This includes build dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
incremental = true

[profile.release]
incremental = true

